[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/UpgradesInterface.gd" type="Script" id=1]
[ext_resource path="res://Materials/menu_backdrop.png" type="Texture" id=2]
[ext_resource path="res://Materials/background.png" type="Texture" id=3]
[ext_resource path="res://Materials/TurretTypeLabel.png" type="Texture" id=4]

[node name="UpgradesInterface" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )

[node name="OuterOutline" type="NinePatchRect" parent="."]
margin_right = 500.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 500, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )

[node name="InnerBackground" type="NinePatchRect" parent="OuterOutline"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -225.0
margin_right = 225.0
margin_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 500, 500 )
texture = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="OuterOutline/InnerBackground"]
margin_right = 500.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OuterOutline/InnerBackground/ScrollContainer"]
margin_right = 100.0
margin_bottom = 39.0

[node name="TurretsLabel" type="TextureRect" parent="OuterOutline/InnerBackground/ScrollContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 19.0
texture = ExtResource( 4 )

[node name="TurretsContainer" type="HBoxContainer" parent="OuterOutline/InnerBackground/ScrollContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 100.0
margin_bottom = 23.0

[node name="UpgradesLabel" type="TextureRect" parent="OuterOutline/InnerBackground/ScrollContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 100.0
margin_bottom = 27.0

[node name="UpgradesContainer" type="HBoxContainer" parent="OuterOutline/InnerBackground/ScrollContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 100.0
margin_bottom = 31.0

[node name="RepairsLabel" type="TextureRect" parent="OuterOutline/InnerBackground/ScrollContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 100.0
margin_bottom = 35.0

[node name="RepairsContainer" type="HBoxContainer" parent="OuterOutline/InnerBackground/ScrollContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 100.0
margin_bottom = 39.0

[node name="ContinueButton" type="Button" parent="OuterOutline"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -81.87
margin_top = -30.4
margin_right = -12.87
margin_bottom = -10.4
text = "Continue"

[node name="TotalPointsLabel" type="Label" parent="OuterOutline"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -21.13
margin_right = 20.0
margin_bottom = -7.13
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PH"
align = 1
valign = 1
[connection signal="button_up" from="OuterOutline/ContinueButton" to="." method="_on_ContinueButton_button_up"]
